# neuroHack_Project-V2

./: .env.example  README.md  pyproject.toml  requirements.txt
artifacts/: summary_all.json
artifacts/artifact/: metrics_recording_test.json  metrics_recording_val.json  metrics_test.json  metrics_val.json  model.pkl  predictions_recording_test.csv  predictions_recording_val.csv  predictions_test.csv  predictions_val.csv  preprocessor.pkl  summary.json
artifacts/cleanup_benchmark/: REPORT.md  benchmark_summary.json
artifacts/concentration/: comparison.json  metrics_recording_test.json  metrics_recording_val.json  metrics_test.json  metrics_val.json  model.pkl  predictions_pairwise_val.csv  predictions_recording_test.csv  predictions_recording_val.csv  preprocessor.pkl
artifacts/generator/: concentration_procedural_engine.json  stress_procedural_engine.json
artifacts/stew/: feature_names.json  (+6 more)
docs/: 01_PROJECT_OVERVIEW.md  02_DATASETS_AND_PREPROCESSING.md  03_TRAINING_EVALUATION_AND_INFERENCE.md  04_RUNTIME_AND_PERSONALIZATION.md  05_OPERATIONS_ARTIFACTS_AND_TESTING.md  PROJECT_REFERENCE.md
eeg_decoder_baseline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  config.py
tests/: conftest.py  test_artifact_loaders.py  test_artifact_support.py  test_cleanup.py  test_engine_training.py  test_features.py  test_generator.py  test_inference.py  test_pipeline_smoke.py  test_playback_tools.py  test_prepare_stew.py  test_runtime.py  test_setup_calibration.py  test_splitters.py  test_stew_loader.py  test_stress_loader.py  test_teacher_api.py
(+294 files in other folders)
